added a warning when no socket connection can be established

--- a/src/static/offline.html
+++ b/src/static/offline.html
@@ -21,8 +21,8 @@
     </style>
 </head>
 <body>
-    <h1>You (or the server) are/is offline</h1>
-    <p>Sorry, the page you're trying to access is unavailable while offline.</p>
+    <h1>The app encountered an error.</h1>
+    <p>The app may be not accessible currently.</p>
     <p>Check your internet connection aswell as the server status and try again.</p>
 </body>
 </html>
